---- Changes since 1.270 ----
The contents of uploaded files are no longer logged.
---- Changes since 1.340 ----
Removed the Module Config option to control if a shell is used when executing a command as a user, since we can now work this out automatically.
---- Changes since 1.390 ----
Re-designed the user interface somewhat, and converted all code to use the new Webmin UI library.
When commands are shown in a table and no parameters are needed, the names now link directly to run the command.
---- Changes since 1.400 ----
Added a popup progress tracker to commands with file upload fields.
---- Changes since 1.410 ----
All links to commands are via an ID number rather than an index, which makes them easier to link to from other web pages.
---- Changes since 1.450 ----
Added a parameter-level option to make the parameter mandatory.
---- Changes since 1.500 ----
Added a button to clone an existing command when editing.
The sort order of commands can now be set on the Module Config page, and is respected in the Webmin Users module.
---- Changes since 1.510 ----
Fixed a bug that broke remote command execution with parameters.
Added a new parameter type for selecting multiple items from a menu.
---- Changes since 1.530 ----
Added an option for custom commands to have their output displayed without any Webmin UI, in a selectable MIME type.
---- Changes since 1.550 ----
A default value for each custom command parameter can now be entered on the Edit Command form. Defaults can also be read from a file or shell command, if this behavior is enabled on the Module Config page. Thanks to Sart Cole for suggesting this feature.
A command can now be configured to not display any output at all, and instead return to the module index after being run.
---- Changes since 1.560 ----
Added an option to the file editor to run a command before the file is displayed, thanks to a suggestion from Sart Cole.