@@ -47,7 +47,9 @@ edit_type9=Menu..
 edit_type10=Upload
 edit_type11=Text box
 edit_type12=Multi menu..
-edit_type13=Date
+edit_type13=Large multi menu..
+edit_type14=Left-right menu..
+edit_type15=Date
 edit_noshow=Hide command when executing?
 edit_usermin=Available in Usermin?
 edit_timeout=Maximum time to wait for command?
